--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -413,7 +413,13 @@
                     setCountdownText(hoursEl, minutesEl, secondsEl, '--', '--', '--');
                     return;
                 }
-                const end = new Date(endTime);
+
+                // Ensure endTime is treated as UTC (Backend tends to omit 'Z' in some endpoints)
+                let dateStr = endTime;
+                if (!dateStr.endsWith('Z') && !dateStr.includes('+')) {
+                    dateStr += 'Z';
+                }
+                const end = new Date(dateStr);
                 function tick() {
                     const now = new Date();
                     let ms = end - now;
@@ -632,7 +638,9 @@
                 } else {
                     // product is standard Product
                     if (product.images && product.images.length > 0) imageUrl = product.images[0];
-                    if (product.variants && product.variants.length > 0) {
+                    if (product.isFlashSale && product.flashSalePrice > 0) {
+                        priceDisplay = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(product.flashSalePrice);
+                    } else if (product.variants && product.variants.length > 0) {
                         priceDisplay = new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(product.variants[0].price);
                     }
                 }
