--- a/src/Frontend/login.html
+++ b/src/Frontend/login.html
@@ -153,6 +153,7 @@
             if (response.ok) {
                 localStorage.setItem('accessToken', data.accessToken);
                 localStorage.setItem('userName', data.user?.fullName || email.split('@')[0]);
+                if (data.user) localStorage.setItem('user', JSON.stringify(data.user));
                 if (data.user?.id) localStorage.setItem('userId', data.user.id);
 
                 const roles = data.user?.roles || [];
