--- a/src/Frontend/product-detail.html
+++ b/src/Frontend/product-detail.html
@@ -735,6 +735,19 @@
                                 `<img src="${url}" alt="Review" class="cursor-pointer" onclick="if(typeof openLightbox==='function')openLightbox(this.src)">`
                             ).join('')}</div>`
                             : '';
+                        const replyHtml = r.replyComment ? `
+                            <div class="mt-4 p-4 bg-gray-50 rounded-lg border-l-4 border-orange-500">
+                                <div class="flex items-center gap-2 mb-2">
+                                    <span class="font-bold text-orange-600 text-sm">Seller Response:</span>
+                                    <span class="text-[10px] text-gray-400 font-mono italic">
+                                        ${r.replyAt ? new Date(r.replyAt).toLocaleString('en-US', { day: 'numeric', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' }) : ''}
+                                        ${r.isReplyEdited ? '<span class="ml-1 text-orange-400 font-medium">(Edited)</span>' : ''}
+                                    </span>
+                                </div>
+                                <p class="text-gray-600 text-sm">"${r.replyComment}"</p>
+                            </div>
+                        ` : '';
+
                         return `<div class="border-b border-gray-200 pb-6 mb-6" data-review-id="${r.id}">
                             <div class="flex items-start gap-4">
                                 <img src="https://ui-avatars.com/api/?name=${encodeURIComponent(r.userName || 'U')}&background=eee&color=666" alt="User" class="w-12 h-12 rounded-full">
@@ -748,6 +761,7 @@
                                     <p class="text-gray-700 mb-2">${r.comment || '-'}</p>
                                     ${imagesHtml}
                                     ${actionBtns}
+                                    ${replyHtml}
                                 </div>
                             </div>
                         </div>`;
@@ -945,8 +959,13 @@
 
             if (productHasFs || variantHasFs) {
                 isFlashSale = true;
+                const totalFsStock = variantHasFs ? variant.flashSaleStock : product.flashSaleStock;
+                const soldFsCount = variantHasFs ? (variant.flashSaleSold || 0) : (product.flashSaleSold || 0);
+
                 price = variantHasFs ? variant.flashSalePrice : product.flashSalePrice;
-                stock = variantHasFs ? variant.flashSaleStock : (variant ? variant.stock : product.flashSaleStock);
+                // Important: stock for the buyer is the REMAINING stock
+                stock = Math.max(0, totalFsStock - soldFsCount);
+
                 flashSaleEndTime = variantHasFs ? variant.flashSaleEndTime : product.flashSaleEndTime;
 
                 // Old price is the regular price
@@ -991,16 +1010,8 @@
             // --- SOLD PROGRESS BAR ---
             const soldContainer = document.getElementById('flashSaleSoldContainer');
             if (isFlashSale) {
-                let soldKv = 0;
-                let stockKv = 0;
-
-                if (variant) {
-                    soldKv = variant.flashSaleSold || 0;
-                    stockKv = variant.flashSaleStock || 0;
-                } else {
-                    soldKv = product.flashSaleSold || 0;
-                    stockKv = product.flashSaleStock || 0;
-                }
+                let soldKv = variantHasFs ? (variant.flashSaleSold || 0) : (product.flashSaleSold || 0);
+                let stockKv = variantHasFs ? (variant.flashSaleStock || 0) : (product.flashSaleStock || 0);
 
                 // If stockKv is 0, avoid division by zero
                 const total = stockKv > 0 ? stockKv : 1;
